assets/css/style.css
nav ul a,
nav .brand-logo {
  color: #444;
}
p {
  line-height: 2rem;
  text-align: center;
}
#myHeader {
  /* padding: 0px 0px 1px 0px; */
  background: #555;
  color: #f1f1f1;
  z-index: 998; /* first number where AFB isn't above the header */
}
.sticky {
  position: fixed;
  top: 0px;
  width: 100%;
}
.sticky + .content {
  padding-top: 60px;
}
#brand-image {
  width: 60px;
  margin-right:10px; 
}

#about {
  padding-top: 25px;
}

#skills {
  background-color: #51a39a;
  padding-top: 40px;
}
#portfolio {
  /* background-color: green; */
  padding-top: 25px;
}
#education {
  background-color: #51a39a;
  padding-top: 25px;
}
#contact {
  background-color: #51a39a;
}
.link{
  color: black;
}

h5 {
  margin: -5px 0 -5px 0;
}
#tagline {
  margin-top:50px;
  width: 325px;
}
#download-button {
  margin-right: 80px;
}
.logos {
  width: 75px;
  display: flex;
  margin-left: auto;
  margin-right: auto;
}
/* Make sure that padding behaves as expected */
* {box-sizing:border-box}

/* Container for skill bars */
.skills-container {
  width: 100%; /* Full width */
  background-color: #ddd; /* Grey background */
  border: 1px black solid;
}

.skills {
  text-align: right; /* Right-align text */
  padding: 10px; /*Add some padding */
  color: white; /* White text color */
}

.html {width: 90%; background-image: linear-gradient(to right, rgb(146, 233, 149), #4CAF50); border-right: 1px black solid} /* Green */
.css {width: 80%; background-image: linear-gradient(to right, rgb(129, 198, 254), #2196F3); border-right: 1px black solid} /* Blue */
.js {width: 65%; background-image: linear-gradient(to right, #ff6e64, #f44336); border-right: 1px black solid} /* Red */
.node {width: 60%; background-image: linear-gradient(to right, rgb(255, 208, 119), orange); border-right: 1px black solid}
.mern {width: 50%; background-image: linear-gradient(to right, #c9c9c9, #808080); border-right: 1px black solid} /* Dark Grey */

#skills-label {
  margin-bottom: -2px;
}

.card-title {
  margin-top: -40px;
  color: #51a39a;
}
.fixed-action-btn{
  position: relative;
  margin-top: 22px;
  margin-right: -20px;
  /* right: auto;  */
  /* margin-left: 5%; */
}
#college1, #college2 {
  font-size: 24px;
  text-align: left;
}


.sidenav-trigger {
  color: #26a69a;
}
.parallax-container {
  /* min-height: 380px; */
  min-height: 400px;
  line-height: 0;
  height: auto;
  color: rgba(255,255,255,.9);
}
.parallax-container .section {
  width: 100%;
}

/* tooltip for copying email address to clipboard*/
.tooltip {
  position: relative;
  display: inline-block;
}

.tooltip .tooltiptext {
  visibility: hidden;
  width: 200px;
  background-color: #555;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px;
  position: absolute;
  z-index: 1;
  bottom: 150%;
  left: 50%;
  margin-left: -75px;
  opacity: 0;
  transition: opacity 0.3s;
}

.tooltip .tooltiptext::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #555 transparent transparent transparent;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
  opacity: 1;
}

@media only screen and (max-width : 992px) {
  .parallax-container .section {
    position: absolute;
    top: 40%;
  }
  #index-banner .section {
    top: 10%;
  }
  #tagline {
    margin-top: 300px;
    width: 100%;
  }
  #download-button {
    display: none;
  }
  .logos {
    width: 60px;
  }
}

@media only screen and (max-width : 600px) {
  #index-banner .section {
    top: 0;
    position: relative; /* to keep image same height */
  }
  #myHeader {
    padding: 0px 0px 50px 0px;
  }
  #logo-container {
    margin-left: 20px;
    font-size: 1.8rem;
  }
  #brand-image {
    width: 50px; 
  }
  #tagline {
    margin-top: 350px;
    width: 100%;
  }
  #download-button {
    display: none;
  }
}

.icon-block {
  padding: 0 15px;
}
.icon-block .material-icons {
  font-size: inherit;
}
footer.page-footer {
  margin: 0;
}

